redner tweets working

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
       </section>
 
       <section id="tweets-container">
-        <article>
+        <article class="tweet">
           <header>
             <img class="avatars" src="https://i.imgur.com/nlhLi3I.png">
             <span class="name">Newton</span>
