--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
+    <script src="https://kit.fontawesome.com/ea1b479425.js" crossorigin="anonymous"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
